--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-pseudo-classes/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-pseudo-classes/style.css
@@ -2,47 +2,51 @@ div:hover {
     border: 3px solid black;
 }
 
-div:nth-child(1) {
-    background: red;
+div:nth-of-type(1) {
+    background-color: yellow;
 }
 
-div:nth-child(1) h3 {
-    color: yellow;
+div:nth-of-type(2) {
+    background-color: purple;
 }
 
-div:nth-child(2) {
-    background: purple;
+div:nth-of-type(3) {
+    background-color: olivedrab;
 }
 
-div:nth-child(2) h3 {
-    color: green;
+div:nth-of-type(4) {
+    background-color: blue;
 }
 
-div:nth-child(2) {
-    height: 100px;
+div:nth-of-type(5) {
+    background-color: beige;
 }
 
-div:nth-child(4) {
-    background: black;
+
+div:nth-of-type(1) > h3 {
+    color: purple;
 }
 
-div:nth-child(4) h3 {
-    color: white;
+div:nth-of-type(2) > h3 {
+    color: aliceblue;
 }
 
-div:nth-child(5) {
-    background: beige;
+div:nth-of-type(3) > h3 {
+    font-weight: 800;
 }
 
-div:nth-child(5) h3 {
-    color: red;
+div:nth-of-type(4) > h3 {
+    font-family: monospace;
 }
 
-div:nth-child(odd) h3 {
+div:nth-of-type(5) > h3 {
     text-decoration: underline;
 }
 
-div:nth-child(even) h3 {
-    text-decoration: none;
+div:nth-of-type(3) {
+    height: 70px;
 }
 
+div:nth-child(odd) h3 {
+    font-style: italic
+  }
