--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/style.css
@@ -10,3 +10,13 @@ ol li:nth-child(odd) {
     text-transform: uppercase;
 }
 
+h1, h2, h3 {
+    color: red;
+}
+
+h1, h2, h3 > em {
+    font-size: 40px;
+    border: 1px solid black;
+}
+
+
