--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/style.css
@@ -1,4 +1,4 @@
-ol {
+ol li {
     background-color: yellow;
 }
 
@@ -10,13 +10,51 @@ ol li:nth-child(odd) {
     text-transform: uppercase;
 }
 
-h1, h2, h3 {
+h1, h2 {
     color: red;
 }
 
-h1, h2, h3 > em {
+h1 em, h2 em {
     font-size: 40px;
     border: 1px solid black;
 }
 
+li {
+    font-size: 30px;
+}
 
+li em {
+    font-weight: bold;
+}
+
+#programing-languages li:not(:nth-child(n+4)) {
+    color: blue;
+}
+
+.java {
+    background-color: pink;
+}
+
+#biggest-allies li a:hover {
+    font-weight: bold;
+}
+
+#biggest-allies  li a:hover {
+    font-weight: bold;
+}
+
+#stackoverflow:hover {
+    color: orange;
+}
+
+#w3schools:hover {
+    color: greenyellow;
+}
+
+#mdn:hover {
+    color: black;
+}
+
+#trybe:hover {
+    color: green;
+}
