--- a/fundamentos/secao-06-html-e-css_forms-flexbox-e-responsivo/dia-04-flexbox-parte2/tryflix/style.css
+++ b/fundamentos/secao-06-html-e-css_forms-flexbox-e-responsivo/dia-04-flexbox-parte2/tryflix/style.css
@@ -17,16 +17,19 @@ body {
 .logo-container {
   display: flex;
   justify-content: center;
+  flex-basis: 268px;
+  order: -1;
 }
 
 .menu-container {
   display: flex;
+  flex-basis: 500px;
 }
 
 .menu-container ul {
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
 }
 
 .menu-container li {
