--- a/fundamentos/secao-06-html-e-css_forms-flexbox-e-responsivo/dia-04-flexbox-parte2/tryflix/style.css
+++ b/fundamentos/secao-06-html-e-css_forms-flexbox-e-responsivo/dia-04-flexbox-parte2/tryflix/style.css
@@ -21,6 +21,10 @@ body {
   order: -1;
 }
 
+.header-container nav {
+  flex-grow: 1;
+}
+
 .menu-container {
   display: flex;
   flex-basis: 500px;
