--- a/fundamentos/secao-06-html-e-css_forms-flexbox-e-responsivo/dia-04-flexbox-parte2/tryflix/style.css
+++ b/fundamentos/secao-06-html-e-css_forms-flexbox-e-responsivo/dia-04-flexbox-parte2/tryflix/style.css
@@ -50,9 +50,18 @@ body {
   flex-wrap: wrap;
 }
 
+.main-container .movie-container {
+  flex-grow: 10;
+}
+
+.main-container aside {
+  flex-grow: 1;
+}
+
 .movie-container {
   display: flex;
   flex-direction: column;
+  flex-basis: 700px;
 }
 
 .movie-container h2 {
@@ -71,6 +80,7 @@ body {
   background-color: #5C687C;
   border: black solid 1px;
   display: flex;
+  flex-basis: 16%;
   height: 150px;
   justify-content: center;
   margin: 10px;
@@ -79,6 +89,7 @@ body {
 .aside-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   flex-basis: 350px;
   margin: 20px;
 }
